--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "koa-connection-limit",
   "description": "connection limit middlware for koa",
-  "version": "0.0.6",
+  "version": "0.1.0",
   "author": {
     "name": "vicanso 小墨鱼",
     "email": "vicansocanbico@gmail.com"
@@ -11,7 +11,7 @@
     "connection limit",
     "middlware"
   ],
-  "main" : "./lib/limit",
+  "main": "./lib/limit",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -20,12 +20,13 @@
   "readmeFilename": "README.md",
   "devDependencies": {
     "gulp": "^3.9.0",
-    "gulp-istanbul": "^0.10.0",
+    "gulp-istanbul": "^0.10.1",
     "gulp-jshint": "^1.11.0",
-    "gulp-mocha": "^2.1.2",
-    "koa": "^0.21.0"
+    "gulp-mocha": "^2.1.3",
+    "koa": "^1.1.0",
+    "koa-router": "^5.2.3",
+    "superagent": "^1.4.0"
   },
-  "readme": "connection limit middlware for koa",
   "dependencies": {
     "debug": "*"
   }
