--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "koa-connection-limit",
   "description": "connection limit middlware for koa",
-  "version": "0.1.0",
+  "version": "2.0.0",
   "author": {
     "name": "vicanso 小墨鱼",
     "email": "vicansocanbico@gmail.com"
@@ -11,7 +11,7 @@
     "connection limit",
     "middlware"
   ],
-  "main": "./lib/limit",
+  "main": "./lib/limit.js",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -23,11 +23,11 @@
     "gulp-istanbul": "^0.10.1",
     "gulp-jshint": "^1.11.0",
     "gulp-mocha": "^2.1.3",
-    "koa": "^1.1.0",
+    "koa": "^2.0.0-alpha.3",
     "koa-router": "^5.2.3",
     "superagent": "^1.4.0"
   },
   "dependencies": {
-    "debug": "*"
+    "debug": "^2.2.0"
   }
 }
