--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
 		"url": "https://github.com/vicanso/koa-connection-limit.git"
 	},
 	"readmeFilename": "README.md",
+	"scripts": {
+		"test": "node ./node_modules/.bin/jshint ./lib/*.js && node ./node_modules/.bin/_mocha --reporter spec",
+		"test-cov": "node ./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha --",
+		"test-travis": "node ./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha --report lcovonly --"
+	},
 	"devDependencies": {
-		"gulp": "^3.9.0",
-		"gulp-istanbul": "^0.10.3",
-		"gulp-jshint": "^2.0.0",
-		"gulp-mocha": "^2.2.0",
-		"koa": "^2.0.0-alpha.3"
+		"istanbul": "^0.4.1",
+		"jshint": "^2.8.0",
+		"mocha": "^2.3.4"
 	},
 	"dependencies": {
 		"debug": "^2.2.0"
