--- a/package.json
+++ b/package.json
@@ -1,34 +1,35 @@
 {
-	"name": "koa-connection-limit",
-	"description": "connection limit middlware for koa",
-	"version": "2.0.0",
-	"author": {
-		"name": "vicanso 小墨鱼",
-		"email": "vicansocanbico@gmail.com"
-	},
-	"keywords": [
-		"koa",
-		"connection limit",
-		"middlware"
-	],
-	"main": "./lib/limit.js",
-	"license": "MIT",
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/vicanso/koa-connection-limit.git"
-	},
-	"readmeFilename": "README.md",
-	"scripts": {
-		"test": "node ./node_modules/.bin/jshint ./lib/*.js && node ./node_modules/.bin/_mocha --reporter spec",
-		"test-cov": "node ./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha --",
-		"test-travis": "node ./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha --report lcovonly --"
-	},
-	"devDependencies": {
-		"istanbul": "^0.4.1",
-		"jshint": "^2.8.0",
-		"mocha": "^2.3.4"
-	},
-	"dependencies": {
-		"debug": "^2.2.0"
-	}
+  "name": "koa-connection-limit",
+  "description": "connection limit middlware for koa",
+  "version": "2.0.0",
+  "author": {
+    "name": "vicanso 小墨鱼",
+    "email": "vicansocanbico@gmail.com"
+  },
+  "keywords": [
+    "koa",
+    "connection limit",
+    "middlware"
+  ],
+  "main": "./lib/limit.js",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/vicanso/koa-connection-limit.git"
+  },
+  "readmeFilename": "README.md",
+  "scripts": {
+    "test": "node ./node_modules/.bin/jshint ./lib/*.js && node ./node_modules/.bin/_mocha --reporter spec",
+    "test-cov": "node ./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha --",
+    "test-travis": "node ./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha --report lcovonly --"
+  },
+  "devDependencies": {
+    "istanbul": "^0.4.1",
+    "jshint": "^2.8.0",
+    "koa": "^2.0.0-alpha.3",
+    "mocha": "^2.3.4"
+  },
+  "dependencies": {
+    "debug": "^2.2.0"
+  }
 }
