--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "koa-connection-limit",
   "description": "connection limit middlware for koa",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "author": {
     "name": "vicanso 小墨鱼",
     "email": "vicansocanbico@gmail.com"
@@ -27,7 +27,8 @@
     "istanbul": "^0.4.1",
     "jshint": "^2.8.0",
     "koa": "^2.0.0-alpha.3",
-    "mocha": "^2.3.4"
+    "mocha": "^2.3.4",
+    "supertest": "^1.1.0"
   },
   "dependencies": {
     "debug": "^2.2.0"
