--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "koa-connection-limit",
   "description": "connection limit middlware for koa",
-  "version": "2.0.3",
+  "version": "2.0.4",
   "author": {
     "name": "vicanso 小墨鱼",
     "email": "vicansocanbico@gmail.com"
@@ -23,16 +23,16 @@
   },
   "readmeFilename": "README.md",
   "scripts": {
-    "test": "node ./node_modules/.bin/jshint ./lib/*.js && node ./node_modules/.bin/_mocha --reporter spec",
-    "test-cov": "node ./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha --",
-    "test-travis": "node ./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha --report lcovonly --"
+    "test": "node ./node_modules/.bin/eslint ./lib/*.js && NODE_ENV=test node ./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha ./test/*.js --"
   },
   "devDependencies": {
-    "istanbul": "^0.4.1",
-    "jshint": "^2.8.0",
-    "koa": "^2.0.0-alpha.3",
-    "mocha": "^2.3.4",
-    "supertest": "^1.1.0"
+    "eslint": "^2.9.0",
+    "eslint-config-airbnb": "^8.0.0",
+    "eslint-plugin-import": "^1.6.1",
+    "istanbul": "^0.4.3",
+    "koa": "^2.0.0",
+    "mocha": "^2.4.5",
+    "supertest": "^1.2.0"
   },
   "dependencies": {
     "debug": "^2.2.0"
