--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "koa-connection-limit",
   "description": "connection limit middlware for koa",
-  "version": "2.0.4",
+  "version": "2.0.5",
   "author": {
     "name": "vicanso 小墨鱼",
     "email": "vicansocanbico@gmail.com"
@@ -26,13 +26,15 @@
     "test": "node ./node_modules/.bin/eslint ./lib/*.js && NODE_ENV=test node ./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha ./test/*.js --"
   },
   "devDependencies": {
-    "eslint": "^2.9.0",
-    "eslint-config-airbnb": "^8.0.0",
-    "eslint-plugin-import": "^1.6.1",
-    "istanbul": "^0.4.3",
+    "eslint": "^3.6.1",
+    "eslint-config-airbnb": "^12.0.0",
+    "eslint-plugin-import": "^1.16.0",
+    "eslint-plugin-jsx-a11y": "^2.2.2",
+    "eslint-plugin-react": "^6.3.0",
+    "istanbul": "^0.4.5",
     "koa": "^2.0.0",
-    "mocha": "^2.4.5",
-    "supertest": "^1.2.0"
+    "mocha": "^2.5.3",
+    "supertest": "^2.0.0"
   },
   "dependencies": {
     "debug": "^2.2.0"
