--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "eslint-plugin-react": "^6.8.0",
     "istanbul": "^0.4.5",
     "jsdoc": "^3.4.3",
-    "koa": "^2.2.0",
+    "koa": "2.0.0",
     "mocha": "^3.1.0",
     "supertest": "^3.0.0"
   },
